@@ -101,7 +101,7 @@ GraphImplementation::GraphImplementation(const String & title,
   , xTitle_(xTitle)
   , yTitle_(yTitle)
   , showAxes_(showAxes)
-  , logScale_(logScale)
+  , logScale_(NONE)
   , showGrid_(true)
   , gridColor_("gray")
   , xMargin_(ResourceMap::GetAsScalar("Graph-DefaultHorizontalMargin"))
@@ -121,6 +121,7 @@ GraphImplementation::GraphImplementation(const String & title,
   if (!IsValidLegendPosition(legendPosition)) throw InvalidArgumentException(HERE) << "The given legend position = " << legendPosition << " is invalid";
   if (!(legendFontSize > 0.0)) throw InvalidArgumentException(HERE) << "The given legend font size = " << legendFontSize << " is invalid, it must be > 0";
   legendPosition_ = legendPosition;
+  setLogScale(logScale);
 }
 
 /* Virtual constructor */
